--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.3.12",
     "@nestjs/platform-fastify": "^9.3.12",
+    "@nestjs/swagger": "^7.1.13",
     "@nestjs/typeorm": "^9.0.1",
     "@types/bcrypt": "^5.0.0",
     "axios": "^1.4.0",
@@ -49,6 +50,7 @@
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "swagger-themes": "^1.2.30",
     "typeorm": "^0.3.12"
   },
   "devDependencies": {
